# invenio-requests

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
invenio_requests/: __init__.py  config.py  errors.py  ext.py  proxies.py  registry.py  tasks.py  webpack.py
invenio_requests/alembic/: 1759321170_add_index_to_request_events_request_id_.py  1763728177_create_request_files_table.py  3ca07f2ee12b_change_datetime_types_addition.py  5cd30a3503c9_create_requests_branch.py  74b23178bfbe_change_datetime_types.py  a14fa442680f_create_tables.py
invenio_requests/assets/semantic-ui/js/invenio_requests/: InvenioRequestsApp.js  data.js  index.js  requestsAppInit.js  store.js
invenio_requests/assets/semantic-ui/js/invenio_requests/api/: InvenioRequestApi.js  InvenioRequestEventsApi.js  InvenioRequestFilesApi.js  api.js  index.js  serializers.js
invenio_requests/assets/semantic-ui/js/invenio_requests/components/: Buttons.js  CreatorList.js  Error.js  ErrorBoundary.js  (+9 more)
invenio_requests/assets/semantic-ui/translations/invenio_requests/: i18next-scanner.config.js
invenio_requests/customizations/: __init__.py  actions.py  event_types.py  request_types.py  states.py
invenio_requests/customizations/user_moderation/: __init__.py  user_moderation.py
invenio_requests/notifications/: __init__.py  builders.py  filters.py  generators.py
invenio_requests/records/: __init__.py  api.py  models.py  validators.py
invenio_requests/records/dumpers/: __init__.py  calculated.py  granttokens.py  parentchild.py
invenio_requests/records/jsonschemas/: __init__.py
invenio_requests/records/mappings/: __init__.py
invenio_requests/records/mappings/os-v2/: __init__.py
invenio_requests/records/mappings/v7/: __init__.py
invenio_requests/records/systemfields/: __init__.py  computed.py  entity_reference.py  event_type.py  expired_state.py  files.py  identity.py  relatedrecord.py  request_state.py  request_type.py  status.py
invenio_requests/resolvers/: __init__.py  registry.py  requests.py
invenio_requests/resources/: __init__.py
invenio_requests/resources/events/: __init__.py  config.py  resource.py
invenio_requests/resources/files/: __init__.py  config.py  resource.py
invenio_requests/resources/requests/: __init__.py  config.py  fields.py  resource.py
invenio_requests/services/: __init__.py  generators.py  links.py  permissions.py  results.py  schemas.py
invenio_requests/services/events/: __init__.py  config.py  service.py
invenio_requests/services/files/: __init__.py  config.py  errors.py  service.py
invenio_requests/services/requests/: __init__.py  components.py  config.py  facets.py  params.py  results.py  service.py
invenio_requests/services/user_moderation/: __init__.py  errors.py  service.py
invenio_requests/templates/semantic-ui/invenio_notifications/: comment-request-event.create.jinja  comment-request-event.reply.jinja
invenio_requests/templates/semantic-ui/invenio_requests/: tombstone.html
invenio_requests/templates/semantic-ui/invenio_requests/details/: index.html
invenio_requests/views/: __init__.py  api.py  decorators.py  ui.py
invenio_requests/views/files/: __init__.py  requests.py  ui.py
tests/: conftest.py  test_alembic.py  test_invenio_requests.py  test_type_registry.py
tests/customizations/: test_event_types.py  test_request_types.py
tests/mock_module/: __init__.py  administration.py  blueprint.py  request_type.py
tests/records/: test_request_api.py  test_request_numberseq.py  test_systemfield_relatedrecord.py
tests/records/events/: test_api.py
tests/records/systemfields/: conftest.py  helpers.py  test_calculated_systemfield.py  test_last_activity_field.py  test_last_reply_field.py
tests/registry/: conftest.py  test_registries.py
tests/resources/: conftest.py
tests/resources/events/: conftest.py  test_request_events_resources.py
tests/resources/files/: conftest.py  test_request_files_resources.py
tests/resources/requests/: conftest.py  test_requests_resources.py
tests/resources/user_moderation/: test_user_moderation_resources.py
tests/services/: conftest.py
tests/services/components/: test_request_reviewers_component.py
tests/services/events/: conftest.py  test_event_permissions.py  test_request_events_service.py  test_request_events_service_config.py
tests/services/requests/: test_request_permissions.py  test_request_search_permissions.py  test_requests_schemas.py  test_requests_service.py  test_requests_service_config.py  test_requests_tasks.py
tests/services/user_moderation/: test_user_moderation_service.py
tests/ui/: conftest.py  test_request_ui_files_resources.py
(+60 files in other folders)
